k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: company-backend

  template:
    metadata:
      labels:
        app: company-backend

    spec:
      serviceAccountName: company-backend

      containers:
        - name: backend

          image: 925047940866.dkr.ecr.ap-northeast-1.amazonaws.com/std01-ex9-backend:c94da8a9f4618e556fb8db0af559e41842fb88a7

          ports:
            - containerPort: 8000
