k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: company-frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: company-frontend

  template:
    metadata:
      labels:
        app: company-frontend

    spec:
      containers:
        - name: frontend
          image: 925047940866.dkr.ecr.ap-northeast-1.amazonaws.com/std01-ex9-frontend:5ed1665f056bdcfc4e53891db0a405bb8c24cc8d

          ports:
            - containerPort: 80
