k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: company-backend-service
spec:
  type: ClusterIP
  selector:
    app: company-backend
  ports:
    - port: 8000
      targetPort: 8000
