k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: company-frontend-service
spec:
  type: ClusterIP
  selector:
    app: company-frontend
  ports:
    - port: 80
      targetPort: 80
