k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: company-ingress

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/ssl-redirect: '443'

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:925047940866:certificate/02a00df3-af02-463d-88b5-ebc60bd3003f

spec:
  ingressClassName: alb

  rules:
    # cloumin.cloud
    - host: cloumin.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: company-backend-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: company-frontend-service
                port:
                  number: 80

    # www.cloumin.cloud
    - host: www.cloumin.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: company-backend-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: company-frontend-service
                port:
                  number: 80
